--- a/.editorconfig
+++ b/.editorconfig
@@ -9,10 +9,10 @@ indent_style = space
 
 # Code files
 [*.{cs}]
-indent_size = 2
+indent_size = 4
 insert_final_newline = true
 charset = utf-8-bom
-tab_width = 2
+tab_width = 4
 
 ###############################
 # .NET Coding Conventions     #
@@ -84,9 +84,9 @@ dotnet_naming_symbols.constant_fields.required_modifiers          = const
 [*.cs]
 
 # var preferences
-csharp_style_var_for_built_in_types = true:silent
-csharp_style_var_when_type_is_apparent = true:silent
-csharp_style_var_elsewhere = false:suggestion
+csharp_style_var_for_built_in_types = true:suggestion
+csharp_style_var_when_type_is_apparent = true:suggestion
+csharp_style_var_elsewhere = true:silence
 
 # Expression-bodied members
 csharp_style_expression_bodied_methods = false:silent
