--- a/.editorconfig
+++ b/.editorconfig
@@ -5,12 +5,12 @@
 
 # All files
 [*]
-indent_style = space
+indent_style = tab
+insert_final_newline = true
 
 # Code files
 [*.{cs}]
 indent_size = 4
-insert_final_newline = true
 charset = utf-8-bom
 tab_width = 4
 
@@ -18,7 +18,7 @@ tab_width = 4
 # .NET Coding Conventions     #
 ###############################
 [*.{cs}]
-# Organize usings
+# Organize using statements
 dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = true
 
